--- a/app/html/home/home.html
+++ b/app/html/home/home.html
@@ -196,7 +196,49 @@ In her spare time, she is also training as a decoy in dog protection sports (PSA
       </div>
 
   </section>
-  <section id="contact" class="pt-5 pb-3">
+  <section id="reviews" class="pb-3">
+    <div class="container py-5">
+      <h2 class="text-center mb-4">What Our Customers Say</h2>
+  
+      <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          
+          <!-- Testimonial 1 -->
+          <div class="carousel-item active">
+            <h5>Jane Doe</h5>
+            <p>"This is hands down the best service I have ever used. Highly recommended!"</p>
+            <span class="d-block">⭐⭐⭐⭐⭐</span>
+          </div>
+  
+          <!-- Testimonial 2 -->
+          <div class="carousel-item">
+            <h5>John Smith</h5>
+            <p>"A fantastic experience! Their attention to detail and customer service is top-notch."</p>
+            <span class="d-block">⭐⭐⭐⭐⭐</span>
+          </div>
+  
+          <!-- Testimonial 3 -->
+          <div class="carousel-item">
+            <h5>Emily Clark</h5>
+            <p>"I have never been more satisfied with a product. Excellent quality and service."</p>
+            <span class="d-block">⭐⭐⭐⭐⭐</span>
+          </div>
+  
+        </div>
+  
+        <!-- Carousel Controls -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </section>
+  <section id="contact" class="pt-5 pb-3" style="background-color: rgba(255,255,255,0.1);">
     <div class="container">
       <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"></div>
 
@@ -232,6 +274,16 @@ In her spare time, she is also training as a decoy in dog protection sports (PSA
           <div class="col-md-5">
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <section id="contact_form" class="pt-5 pb-3">
+    <div class="container">
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"></div>
+
+        <div class="row gy-4">
 
           <div class="col">
             <form action="forms/contact.php" method="post" class="php-email-form aos-init" data-aos="fade-up" data-aos-delay="200">
@@ -280,4 +332,6 @@ In her spare time, she is also training as a decoy in dog protection sports (PSA
       </div>
     </div>
   </section>
+
+
 {% endblock %}
