--- a/app/html/admin/users.html
+++ b/app/html/admin/users.html
@@ -3,7 +3,9 @@
 <div class="container pt-5">
     <div class="row pt-5">
         <div class="col-12">
+            {% if existing_user.account_type == "admin" %}
             <button type="button" class="btn btn-sm btn-outline-light float-end" title="Add New" data-bs-toggle="modal" data-bs-target="#mdlogin"><i class="fas fa-add me-2"></i>Add New</button>
+            {% endif %}
             <h5><span id="usercount" class="me-2">{{users|length}}</span>Users</h5>
         </div>
         <div class="col-12 pt-2">
@@ -86,19 +88,23 @@
             <div class="form-outline mb-2">
                 <label class="form-label" for="editlevel">User Level</label>
                 <select id="editlevel" class="form-select">
-                    <option value="admin">Admin</option>
+                    {% if existing_user.account_type == "admin" %}
+                        <option value="admin">Admin</option>
+                    {% endif %}                    
                     <option value="client">Client</option>
                 </select>
             </div>   
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="cbVerified" >
+                <input class="form-check-input" type="checkbox" value="" id="cbVerified" {% if existing_user.account_type != "admin" %}disabled{% endif %} >
                 <label class="form-check-label text-black" for="cbVerified">
                   Is Verified
                 </label>
             </div>
         </div>
         <div class="modal-footer" style="justify-content: space-between;">
-            <button type="button" class="btn btn-danger" onclick="deleteuser();"><i class="fas fa-trash me-2"></i>Delete user</button>
+            {% if existing_user.account_type == "admin" %}
+                <button type="button" class="btn btn-danger" onclick="deleteuser();"><i class="fas fa-trash me-2"></i>Delete user</button>
+            {% endif %} 
             <button type="button" class="btn login_button" onclick="updateuser();"><i class="fas fa-save me-2"></i>Save changes</button>
         </div>
       </div>
