--- a/app/html/master/logged_in.html
+++ b/app/html/master/logged_in.html
@@ -42,7 +42,9 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="/pets" class="nav-link"><i class="fas fa-paw me-1"></i>Pets</a></li>
                     <li class="nav-item"><a href="/bookings" class="nav-link"><i class="fas fa-calendar me-1"></i>Bookings</a></li>
+                    {% if existing_user.account_type == "admin" %}
                     <li class="nav-item"><a href="/classes" class="nav-link"><i class="fas fa-clock me-1"></i>Classes</a></li>
+                    {% endif %}
                     <li class="nav-item"><a href="/users" class="nav-link"><i class="fas fa-user me-1"></i>Users</a></li>
                 </ul>
             </div>
