--- a/app/html/loggedin/bookings.html
+++ b/app/html/loggedin/bookings.html
@@ -792,6 +792,7 @@
             // Outer Day
             var outer = createElement("div", this.getDayClass(day));
             outer.addEventListener("click", function () {
+                event.stopPropagation();
                 self.openDay(this);
             });
 
@@ -901,6 +902,7 @@
                 "div",
                 "events in" + (currentWrapper ? " new" : "")
             );
+            wrapper.style = "margin-top: 40px";
 
             events.forEach(function (ev) {
                 var div = createElement("div", "event");
@@ -910,7 +912,7 @@
                 var span = createElement("span", "", ev.eventName);
 
                 span.style.cursor = "pointer"; // Make the span look clickable
-                span.addEventListener("click", function () {
+                div.addEventListener("click", function () {
                     openModal(ev); // Pass the event details to openModal function
                 });
 
@@ -1034,17 +1036,17 @@
     })();
 
 
-    document.querySelector(".close").addEventListener("click", function () {
-        document.getElementById("eventModal").style.display = "none";
-    });
+    // document.querySelector(".close").addEventListener("click", function () {
+    //     document.getElementById("eventModal").style.display = "none";
+    // });
 
     // Close the modal if user clicks anywhere outside of the modal
-    window.addEventListener("click", function (event) {
-        var modal = document.getElementById("eventModal");
-        if (event.target === modal) {
-            modal.style.display = "none";
-        }
-    });
+    // window.addEventListener("click", function (event) {
+    //     var modal = document.getElementById("eventModal");
+    //     if (event.target === modal) {
+    //         modal.style.display = "none";
+    //     }
+    // });
 
     function openModal(event) {
         var modalElement = document.getElementById("eventModal");
@@ -1129,6 +1131,7 @@
         sendDataUrl('/bookings/create', JSON.stringify(data), function (data) {
             closeModal();
             alert("Your booking has been made. You will recieve confirmation via email.")
+            location.reload();
         });
     }
 
